Start porting to 1.21.1
It compiles, besides the hud render callback which needs more work